--- a/blogs/how-to-build-muscle-and-stay-fit-for-busy-individuals.mdx
+++ b/blogs/how-to-build-muscle-and-stay-fit-for-busy-individuals.mdx
@@ -123,9 +123,7 @@ And even less time for a Leg Extension
 <section className="my-4" id="workout-program">
 ### Workout Program
 
-I will provide you exercises for each muscle group.
-I will also provide you a workout program that you can follow.
-You can do this program once, twice or three times a week. I'd recommend doing it three times a week.
+You can follow this exercise routine, twice or three times a week. I'd recommend doing it three times a week.
 
 <section className="my-2">
 #### Chest 
@@ -194,8 +192,8 @@ You can use the minimalist approach and gain significant results.
 Or if you have more time you can use the not so minimalist approach and gain a bit more.
 You can also switch up the exercises, for example, you can hit the incline bench press and chest fly (optional) and hit machine side raise for shoulders. 
 Since incline bench press already targets some of your front delts.
-You can also hit the squats, leg curl and leg extension for legs and skip the deadlift.
-You can pick one set of exercise for Workout A and another for B. Rhe world is your oyster.
+You can also hit the squats, leg curl and leg extension for legs and skip the deadlifts.
+You can pick one set of exercise for Workout A and another for B. The world is your oyster.
 
 However, if you don't know what you are doing I suggest you to stick to the above program.
 </section>
