--- a/blogs/if-you-you-want-to-get-big-train-like-a-powerlifter.mdx
+++ b/blogs/if-you-you-want-to-get-big-train-like-a-powerlifter.mdx
@@ -20,10 +20,52 @@ And aid you in your fitness goals.
 <section className="my-4">
 
 ## 1-6 Reps for Strength, 8-12 Reps for Size?
-As the title suggests, there is a notion that if you train at 
-1-6 reps you will get stronger but not that big, 
-and if you train at 8-12 reps you will get bigger but not that strong.
-However, this is not the case. If it was, you can literally see it omits 7 reps, 
-what does that do then? Nothing?
+
+As the title suggests, there is a notion that if you train at 1-6 reps, you will get stronger but not much bigger, and if you train at 8-12 reps, you will get bigger but not much stronger. However, this is not the case. If it were, what about 7 reps? Does it do nothing?
+
+The truth is, you are building muscle at every rep range. The only thing that matters is whether you are training hard enough. If you are training close to failure, you will gain muscle. Sure, one rep is not as effective as five reps for building muscle, but it still contributes to growth. The optimal range is 5-30 reps.
+
+However, I suggest you train at 4-6 reps, like powerlifters do. This rep range results in the least amount of muscle soreness, fatigue, and muscle damage. As a result, you can maximize your gains since your body does not have to work extra hard to recover while still receiving a similar amount of stimulus.
+</section>
+
+<section className="my-4">
+
+## High Frequency Training
+
+Typically, powerlifters train their big three movements or variations of them 2-3 times a week. They do this for skill practice and strength adaptation. However, we can also train our muscles at least 2-3 times a week since our muscles are either growing or shrinking all the time. Muscles grow for up to 48 hours after a workout and then start to atrophy.
+
+So, if we train our muscles every 48 hours, they will continuously grow. This is the most optimal way to train.
+
+I recommend full-body workouts every other day or at least 2-3 times a week. If you find that boring, like many people do, I suggest an Upper/Lower split: Upper, Lower, Rest, Upper, Lower, Rest, Rest. This schedule provides adequate rest while maintaining enough frequency for optimal growth.
+</section>
+
+<section className="my-4">
+
+## Mechanical Tension and Progressive Overload
+
+Many bodybuilders focus on the burn or the pump, which can be good indicators of workout intensity. However, these are not direct indicators of an effective workout.
+
+Powerlifters, on the other hand, focus on mechanical tension and progressive overload. Mechanical tension refers to the amount of stress placed on muscles, while progressive overload involves gradually increasing weight or reps over time.
+
+Mechanical tension is the primary driver of muscle growth, and progressive overload is a key indicator of improvement. If you prioritize these two principles, you will get bigger. Choose exercises that provide the most mechanical tension for your muscles and progressively increase the weight or reps. If you are growing, your numbers should steadily increase over time.
+
+</section>
+
+
+<section className="my-4">
+
+## Long Rest Times Between Sets
+
+One major difference between bodybuilders and powerlifters is rest time between sets. Powerlifters take longer breaks to fully recover so they can exert maximum effort on each set. Bodybuilders should adopt this practice as well.
+
+I suggest resting 3-5 minutes between sets for big compound exercises and 2-3 minutes for smaller isolation exercises.
+</section>
+
+
+<section className="my-4">
+
+## Fatigue and Muscle Soreness 
+
+Powerlifters train in a way that minimizes fatigue and muscle soreness so they can recover effectively between sessions. As bodybuilders, we should do the same. Managing fatigue allows for more efficient training multiple times per week, leading to consistent progress.
 
 </section>
